ova: CA & SSH key gen support
This patch introduces support for generating CAs for single-node
clusters or clusters deployed by the bootstrap method. Additionally,
there is now support for generating SSH keys that are distributed to all
nodes and can be retrieved via the yakity.SSH_PRV_KEY value.

--- a/ova/Makefile
+++ b/ova/Makefile
@@ -1,5 +1,6 @@
 all: build
 
+LINUX_DISTRO ?= photon
 OVF_EXPORT_DIR ?= $(HOME)/Downloads
 
 govc: govc-linux-amd64
@@ -15,9 +16,9 @@ prep-centos prep-photon: govc-linux-amd64
 seal-centos seal-photon: govc-linux-amd64
 	LINUX_DISTRO=$(subst seal-,,$@) hack/prep.sh seal
 
-prep: prep-centos prep-photon
+prep: prep-$(LINUX_DISTRO)
 
-seal: seal-centos seal-photon
+seal: seal-$(LINUX_DISTRO)
 
 %-1.vmdk: $(OVF_EXPORT_DIR)/%-1.vmdk
 	cp -f $? $@
