--- a/ova/yakity.service
+++ b/ova/yakity.service
@@ -20,19 +20,22 @@ WorkingDirectory=/var/lib/yakity
 ExecStartPre=/bin/mkdir -p /var/log/yakity
 
 # Update the host name with the value from the OVF environment.
-ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-sethostname.sh 2>&1 | tee /var/log/yakity/sethostname.log'
+ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-hostname.sh 2>&1 | tee /var/log/yakity/hostname.log'
+
+# Create a load balancer if configured to do so.
+ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-load-balancer.sh create 2>&1 | tee /var/log/yakity/load-balancer.log'
 
 # Get information about the vSphere platform and select the cloud provider.
 ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-vsphere.sh 2>&1 | tee /var/log/yakity/vsphere.log'
 
 # Generate a self-signed CA if one is unavailable.
-ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-newca.sh 2>&1 | tee /var/log/yakity/newca.log'
+ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-ca.sh generate 2>&1 | tee /var/log/yakity/ca.log'
 
 # Generate an SSH key pair if one is not available.
 ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-ssh.sh 2>&1 | tee /var/log/yakity/ssh.log'
 
 # See if the OVA was deployed to bootstrap a multi-node cluster.
-ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-clone.sh 2>&1 | tee /var/log/yakity/clone.log'
+ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-cluster.sh 2>&1 | tee /var/log/yakity/cluster.log'
 
 # This command ensures the yakity service will wait until the network
 # is truly online before continuing with any of the subsequent 
@@ -50,16 +53,19 @@ ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-update.sh 2>&1 | tee /var/log/ya
 ExecStartPre=/bin/sh -c '/var/lib/yakity/yakity-guestinfo.sh 2>&1 | tee /var/log/yakity/guestinfo.log'
 
 # The yakity script is responsible for turning up the Kubernetes cluster.
-ExecStart=/bin/sh -c '/var/lib/yakity/yakity.sh 2>&1 | tee /var/log/yakity.log'
+ExecStart=/bin/sh -c '/var/lib/yakity/yakity.sh 2>&1 | tee /var/log/yakity/yakity.log'
+
+# Update the load balancer if configured to do so.
+ExecStartPost=/bin/sh -c '/var/lib/yakity/yakity-load-balancer.sh connect 2>&1 | tee -a /var/log/yakity/load-balancer.log'
 
 # This command sets the CA public certificate as a PEM-encoded value to
 # the guestinfo property yakity.TLS_CA_CRT.
-ExecStartPost=/bin/sh -c '/var/lib/yakity/yakity-setca.sh 2>&1 | tee /var/log/setca.log'
+ExecStartPost=/bin/sh -c '/var/lib/yakity/yakity-ca.sh set 2>&1 | tee -a /var/log/yakity/ca.log'
 
 # This command generates a kubeconfig that can be used to access the cluster
 # (if EXTERNAL_FQDN is set) or the control plane nodes. The kubeconfig file
 # is assigned to the guestinfo property "yakity.kubeconfig".
-ExecStartPost=/bin/sh -c '/var/lib/yakity/yakity-kubeconfig.sh 2>&1 | tee /var/log/kubeconfig.log'
+ExecStartPost=/bin/sh -c '/var/lib/yakity/yakity-kubeconfig.sh 2>&1 | tee /var/log/yakity/kubeconfig.log'
 
 # This command ensures that this service is not run on subsequent boots.
 ExecStartPost=/bin/touch /var/lib/yakity/.yakity.service.done
