ova: Fixed photon issues w new staging VM
This patch fixes the issues with the photon OVA since moving to a new
staging VM.

--- a/ova/Makefile
+++ b/ova/Makefile
@@ -52,4 +52,4 @@ upload-%: yakity-%.ova
 
 .PHONY: prep seal turn-up turn-down upload
 
-.PRECIOUS: %-1.vmdk %-2.nvram
+.PRECIOUS: %-1.vmdk %-2.nvram yakity-%.ovf
