vagrant: More supported Linux distros via Vagrant
This patch adds support for more Linux distros with Vagrant and updates
the docs.

--- a/ova/yakity-config-keys.env
+++ b/ova/yakity-config-keys.env
@@ -44,6 +44,7 @@ SERVICE_DNS_PROVIDER
 SERVICE_DNS_IPV4_ADDRESS
 SERVICE_DOMAIN
 SERVICE_NAME
+HOST_NAME_OVERRIDE
 K8S_VERSION
 CNI_PLUGINS_VERSION
 CONTAINERD_VERSION
