--- a/ova/kube-update/kube-update.service
+++ b/ova/kube-update/kube-update.service
@@ -20,8 +20,7 @@ After=  network.target network-online.target \
         kube-controller-manager.service \
         kube-proxy.service \
         kube-scheduler.service \
-        kubelet.service \
-        yakity.service
+        kubelet.service
 
 [Install]
 WantedBy=multi-user.target
